assets/css/style.css
/* styles for the overall look of the portfolio site */
/*********************/
/* Colors*/
/* black: #000000;
grey: #666666;
white: #FFFFFF;
light-pink: #ED2C92;
dark-pink: #ED2C92 */
/*********************/

/*********************/
/* BASIC */
/*********************/
*{
    box-sizing: border-box;
}
body, html{
    height: 100%;
    margin: auto;
}
body{
    font-family: "Century Gothic", "Gill Sans", Arial, sans-serif;
	scroll-snap-type: mandatory;
	scroll-snap-points-y: repeat(100vh);
	scroll-snap-type: y mandatory;
}
.bg-image{
    height: 100%;
    background-position: center;
    background-size: cover;
    background-repeat: no-repeat;
    position: relative;
}

#firstBackground {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/photo/trolley.png");
}
#secondBackground {
    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),url("../images/photo/streets.JPG");
}
#welcomeText{
    border: 2px solid white;
  color: white;
  position: relative;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  /*font-weight: bold;
  z-index: 2; */
  padding: 20px;
}
.text-shadow{
    text-shadow: 0 1px #000000;
}
.see-through{
    background-color: rgba(0,0,0, 0.8); /* Black w/opacity/see-through */
}
body > #firstBackground.container-fluid, #secondBackground.container-fluid{
    /* ensures content can be pushed down to give enough space for the nav to always be on top */
    padding-top: 81px;
}
section{
    border-bottom: 1px solid white;
	padding: 1rem;
	height: 100vh;
	scroll-snap-align: start;
	/* text-align: center; */
	position: relative;
}
/*********************/
/* MAIN */
/*********************/
.logo {
    max-width: 19%;
}
/*********************/
/* FOOTER */
/*********************/
footer {
    position: fixed;
	bottom: 0;
	width: 100%;
	/* Set the fixed height of the footer here */
    height: 60px;
    line-height: 60px;
    color: #e7e7e7;
}
footer p{
    font-size: 0.7rem;
}
/*********************/
/* PORTFOLIO PAGE */
/*********************/
.light-grey{
    color: #e7e7e7;
}
.dark-grey{
    color: dimgray;
}
.white{
    background-color: white;
}
.fa-layers-text:hover{
    color: #ED2C92;
}
.wide-modal{
    max-width: 1346px;
}
.fit-img{
    /* allows images to display properly inside cards */
    width: fit-content; 
}
.iframe-custom{
    /* increases height of iframe */
    min-height: 784px;
}
/************************/
/* BOOTSTRAP OVERWRITES */
/************************/
.card-body{
    text-align: left;
}
.carousel-control-prev-icon, .carousel-control-next-icon{
    color: black;
    
}
.carousel-control-next, .carousel-control-prev{
    width: 8%;
}
.carousel-indicators .active{
    background-color: black;
}
.carousel-indicators li{
    background-color: dimgray;
}
/*********************/
/* RESPONSIVE phones*/
/*********************/
@media screen and (max-width: 640px){
    /* navigation area */
    .logo{
        max-width: 44%;
    }
    /************************/
    /* BOOTSTRAP OVERWRITES */
    /************************/
    .iframe-custom{
        /* increases height of iframe */
        min-height: 543px;
    }
    
}
@media screen and (min-width:640px) and (max-width: 768px) {
    /************************/
    /* BOOTSTRAP OVERWRITES tablet*/
    /************************/
    .navbar-collapse{
        /* makes sure the navigation stays on top on the ipad */
        flex-basis: auto;
        flex-grow: inherit;
    }
    .iframe-custom{
        /* increases height of iframe */
        min-height: 740px;
    }
}
@media screen and (min-width: 1024px) and (max-width: 1439px) {
    /************************/
    /* BOOTSTRAP OVERWRITES tablet*/
    /************************/
    .iframe-custom{
        /* increases height of iframe */
        min-height: 1084px;
    }
}

